--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^6.6.0",
+    "@google-cloud/vertexai": "^1.9.3",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
